syntax = "proto3";
package user;
option go_package = "/userservice/genproto";

service UserService {
    rpc CreateUser(CreateUserRequest) returns (UserResponse);
    rpc GetUser(GetUserRequest) returns (UserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
    rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
}

message User {
    string id = 1;
    string name = 2;
    string email = 3;
    string role = 4;
    bool active = 5;
}

message CreateUserRequest {
    string name = 1;
    string email = 2;
    string role = 3;
}

message GetUserRequest {
    string id = 1;
}

message UpdateUserRequest {
    string id = 1;
    string name = 2;
    string email = 3;
    string role = 4;
}

message DeleteUserRequest {
    string id = 1;
}

message DeleteUserResponse {
    string message = 1;
}

message ListUsersRequest {}

message ListUsersResponse {
    repeated User users = 1;
}

message UserResponse {
    User user = 1;
}
